--- a/eas.bib
+++ b/eas.bib
@@ -357,3 +357,11 @@ Shared under CC-BY.},
 	keywords = {Cyberinfrastructure, e-science, Infrastructure, organizations, sustainability, Synergizing},
 	pages = {901--910}
 }
+
+@misc{sustaining-research-projects,
+title={A guide to sustainability models for research software projects},
+author={Daniel S. Katz and C. Titus Brown and Arfon M. Smith and Adam Slagell},
+url={https://github.com/danielskatz/sustaining-research-projects},
+year={2016},
+note={[Last accessed: 2016-11-22]}
+}
