--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -126,7 +126,7 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
+\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used. \jv{unsure about the grammatical structure here with comma's and no ``and''}
 \end{itemize}
 
 % ----------
