--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -201,7 +201,7 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
+\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used. \jv{check grammatical structure by native English speaker}
 %\katznote{maybe ``\dots and when reviewing, I will require others to cite the software they have used.''}
 \end{itemize}
 
@@ -219,6 +219,7 @@ and
 \item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \end{itemize}
 
+\clearpage
 \subsection{Pledge discussion}
 
 Here we discuss, for each pledge, the \emph{background} motivating the pledge, possible \emph{contradictions or concerns} pose challenges for the pledge, \emph{what actions are needed}, \emph{what impact} these actions are expected to bring, and \emph{who else needs to take action}.
