one correction of the executive summary reported in the equivalent text of the introduction

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -196,7 +196,7 @@ The pledges are organized into three groups, dealing with:
 (i) ensuring that research software is properly \emph{cited};
 (ii) promoting the \emph{careers} of research software engineers who develop academic software;
 and
-(iii) ensuring the quality and sustainability of software during its \emph{development}:
+(iii) ensuring the quality and sustainability of software during and following its \emph{development}:
 
 % ----------
 \paragraph{Citation}
