Fix RSE bib entries.

--- a/eas.bib
+++ b/eas.bib
@@ -66,7 +66,7 @@ author = "Piotr Nowakowski and Eryk Ciepiela and Daniel Harezlak and Joanna Koco
   year = {2011},
   publisher = {Elsevier},
   note = {http://www.executablepapers.com/about-challenge.html},
-}s 
+}s
 
 @inproceedings{DBLP:journals/procedia/GorpM11,
   author    = {Pieter Van Gorp and
@@ -119,8 +119,8 @@ Shared under CC-BY.},
 	url = {http://www.rse.ac.uk/objectives.html},
 	urldate = {2016-06-24},
 	journal = {UKRSE Objectives},
-	author = {{RSE Conference 2016}},
-	year = {2016},
+	author = {{Research Software Engineers Association (UKRSE)}},
+	year = {2013},
 	file = {Objectives:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/EEHQ4CR7/objectives.html:text/html}
 }
 
@@ -128,8 +128,8 @@ Shared under CC-BY.},
 	title = {What is a {Research} {Software} {Engineer}?},
 	url = {http://www.rse.ac.uk/who.html},
 	urldate = {2016-06-24},
-	author = {{RSE Conference 2016}},
-	year = {2016},
+	author = {{Research Software Engineers Association (UKRSE)}},
+	year = {2013},
 	file = {What is a Research Software Engineer?:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/PQTZVU28/who.html:text/html}
 }
 
