small changes and typos
fixed a typo (word repetition)
changed a sentence structure
removed 'work,play,love and war' because it seems a little problematic
to suggest that these are all aspects of human live, no?
changed some 'scientists' to 'researcher'
added comments for those changes

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -153,7 +153,7 @@ and
 \section{Introduction}
 
 %\on{NB: adapted from the proposal}
-\emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition (work, play, love and war), it is also embedded firmly in the academic world. On the one hand, in computer science, and in software engineering research in particular we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods.
+\emph{Academia is software driven.} As software is becoming a pervasive technology for automating and innovating every aspect of the human condition, it is also embedded firmly in the academic world. On the one hand, in computer science and in particular software engineering research, we see experimental software and toolkits emerge continuously, either as part of the \emph{output} of research effort, or as part of the \emph{research method}. On the other hand, in general it may be that software is used even more actively in other fields of research such as mathematics, biology, particle physics, astronomy, medicine, and law. Here too, we can distinguish software that is part of the output (\ie development of innovative production techniques) from software that contributes to the research methods.
 
 There is an explosion of available open-data online which is accessed and analysed through the creation of new software --- generating more data to analyse. We focus on the \emph{sustainability} of this software, \ie any software that acquires, cleanses, stores, annotates, transforms, filters, generates (\etc) research data.
 By ``sustainability'' we mean the \emph{capacity to endure}. We define software as sustainable if it will continue to be available in the future, on new platforms, and meeting new needs.
@@ -274,7 +274,7 @@ By requiring authors to provide these links, we will work towards educating the 
 
 \emph{Who else needs to act?} Publishers need to agree to citations being included in publications. Software authors need to provide information about how their software should be cited. Citation tracking systems need to include software citations.
 Editors and authors too will need to begin to hold their colleagues to this standard in order for this to become a community norm.
-Conference chairs/journal editors may add this requirement explicitly when when publishing a call for papers. Publishers and repository administrators
+Conference chairs/journal editors may add this requirement explicitly when publishing a call for papers. Publishers and repository administrators
 % \katznote{I don't know what the name is for people who create and run repositories} \on{repository administrators?}
 need to create mechanisms for all products to includes citations as part of their metadata.
 
@@ -386,7 +386,7 @@ Reviewers of papers need to insist that code behind papers is released. Funders 
 
 
 \emph{Background.}
-By necessity, software is often developed with a somewhat abstracted sense of the ultimate use case. Researchers who adopt our solutions must be provided assistance in mapping their intellectual context to that of the software solution. This includes help in adapting their existing analytical processes, formatting data for use by the solution, and guidance on how its outputs should be interpreted. Failing to provide this kind of help can lead to mutual frustration, wasted research time or inappropriate outputs, and ultimately undermines the value and sustainability of the solution. Furthermore, being in the trusted position of providing guidance and feedback has to be continually legitimized by responding to real concerns in ways that empower, rather than shame. Adopting a tool or process demands time and energy, but is also associated with great uncertainty. It is often not clear (i) whether the solution is appropriate, and (ii) when one should stop pushing a particular solution.
+By necessity, software is often developed with a somewhat abstracted sense of the ultimate use case. Researchers who adopt our software solutions must be provided assistance in mapping their intellectual context to that of the software. This includes help in adapting their existing analytical processes, formatting data for use by the software, and guidance on how its outputs should be interpreted. Failing to provide this kind of help can lead to mutual frustration, wasted research time or inappropriate outputs, and ultimately undermines the value and sustainability of the solution. Furthermore, being in the trusted position of providing guidance and feedback has to be continually legitimized by responding to real concerns in ways that empower, rather than shame. Adopting a tool or process demands time and energy, but is also associated with great uncertainty. It is often not clear (i) whether the solution is appropriate, and (ii) when one should stop pushing a particular solution.
 
 \emph{Contradictions or concerns.}
 Evaluating whether a solution is appropriate is time-intensive, and end users may not be equipped to do so. Additional expertise is needed, but the person offering that expertise bears the burden of communicating effectively to the end users. This takes time, energy, and its own skill set.
@@ -438,7 +438,8 @@ Document your software by:
 
 
 \emph{Why would those small actions have impact?}
-The impact of this (small) step is more and wider recognition that software can contain intellectual contributions, which in turn supports the long-term career paths of academic software engineers to publish about this. This will also establish the field of eScience/eResearch as a more mature scientific discipline.
+The impact of this (small) step is more and wider recognition that software can contain intellectual contributions, which in turn supports the long-term career paths of academic software engineers to publish about this. This will also establish the field of eScience/eResearch as a more mature discipline.
+% CB removed scientific - because of the distinctions of research/scholarship/science, it excludes part of the community. We could say 'academic discipline' instead, though!
 
 \emph{Who else needs to act?}
 We need sufficient venues for this type of work (journals, conferences, \etc).  We need sufficient reviewers.  We need management of the RSE to be supportive.  We need the collaborating PIs to be supportive.  We need to build funding for the time needed to document the contributions and to present them to be either built into the project or to be seen as standard overhead on the work.
@@ -514,7 +515,8 @@ The following specific questions need to be addressed:
 % --------------------------------------------------
 \subsection{Software engineering tools improving productivity by tailoring to intent and skill}
 
-Many common tools that embody SE best practices are not written for scientists. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many scientists write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
+% CB replaced 'scientists' in next line with 'researchers'.
+Many common tools that embody SE best practices are not written for researchers. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many scientists write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
 
 \begin{itemize}
 \item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
