--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -139,7 +139,7 @@ and
 \paragraph{Development}
 \begin{itemize}
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
-\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.
+\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
 \item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 %\kt{Does this belong in the 'citation' bracket ? both are about dissemination-related work} \katznote{the first part of it is more close to citation, but the second part is not.  I think it better fits here.  Another option would be changing this heading to ``Development and Dissemination'', though I'm not really sure that's a better option.}\bc{I see here at least two separate pledges: 1) software lifecycle management: including proper and documented releases, packaging, etc., and 2) the intellectual property to give the appropriate credits (this belongs more on the citation part?)}
 %\on{I would not separate these. I agree there are two things going on here, but I like seeing them together.} \katznote{I'm ok with leaving them here, together.}
@@ -212,10 +212,10 @@ and
 \end{itemize}
 
 % ----------
-\paragraph{Development}
+\paragraph{Development and Use}
 \begin{itemize}
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
-\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.
+\item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
 \item I will publish the intellectual contributions of my research software, and I will document (including usage instructions, and input and output examples), package, release and archive versions of my software.
 \end{itemize}
 
@@ -234,7 +234,7 @@ Here we discuss, for each pledge, the \emph{background} motivating the pledge, p
 \paragraph{I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.}
 
 \emph{Background.} When a scholarly work relies on specific software, it should cite that software, to give credit to the creators of that software, to support reproducibility, and to provide a more complete understanding of the scholarly work.
-This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in science. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
+This is important in order to raise the bar for transparency in academic work, and to recognize software as a research object worthy of exposure to peer review. This requirement by reviewers will help to strengthen the call for increased openness, transparency, and verifiability of software used in research. As researchers are motivated by pressure to publish, reviewers are uniquely able to apply pressure where rigor is needed. Previous work on this topic includes the Open Science Peer Review Oath~\cite{aleksic_open_2015}.
 % http://f1000research.com/articles/3-271/v2
 
 \emph{Contradictions or concerns.}
@@ -315,14 +315,14 @@ Also, junior researchers may be viewed as wasting effort, accused of padding the
 \item When participating in processes where I am evaluated, I will list my software contributions.
 If it is not clear how this may be done, I will explicitly ask where software contributions should be listed in the materials.
 \item If I sit on a review panel, I will encourage those up for promotion to list their software contributions and, where relevant, bring them up in discussions
-\item When I am involved in writing guidelines for evaluation, even within my research group or for students, I will include guidance about the type of software contributions I believe add value to science.
+\item When I am involved in writing guidelines for evaluation, even within my research group or for students, I will include guidance about the type of software contributions I believe add value to research.
 \end{itemize}
 
 \emph{Who else needs to act?}
 These actions should help to drive change in the university at higher levels and will involve the actions of higher level administrators.
 
 % --------------------------------------------------
-\subsubsection*{Development pledges}
+\subsubsection*{Development and Use pledges}
 
 % ----------
 \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
@@ -334,9 +334,9 @@ Initially developing software in closed fora often loses the benefits of open so
 
 Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions (i) Governance and Leadership, (ii) Collaboration infrastructure, and (iii) Contribution processes~\cite{howison2014collaboration}.
 
-A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the scientist will be judged negatively based on the poor quality of the code.
+A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the researcher will be judged negatively based on the poor quality of the code.
 %\meh{Dismissive, uncharitable comments about existing code, as well as identifying a component that is ``easy'' to ``just'' do in some particular way.}
-Dismissive, uncharitable comments about existing code can lead to online shaming, creating and perpetuating a negative attitude towards publishing code developed by scientists.
+Dismissive, uncharitable comments about existing code can lead to online shaming, creating and perpetuating a negative attitude towards publishing code developed by researchers.
 % There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research.
 This in turn leads to a body of computational research that is extremely difficult to reproduce. It is also wasteful of resources since it costs a great deal of money to develop that software. It takes longer to build on such research since the foundations need to be reimplemented.
 
@@ -344,7 +344,7 @@ A very large movement behind this openness is already well underway and has resu
 % \footnote{\url{http://lorenabarba.com/gallery/reproducibility-pi-manifesto/}, \url{http://www.openaccesspledge.com/}}
 
 \emph{Contradictions or concerns.}
-We want scientists to release their code, or even better develop their code completely in the open, however, we criticize them for releasing code that does not comply to a high standard of quality.
+We want researchers to release their code, or even better develop their code completely in the open, however, we criticize them for releasing code that does not comply to a high standard of quality.
 
 Some institutions prohibit release of software under a FOSS license without IP review. This can often be addressed by planning and stating the code will be open sourced at the time funding is sought, \ie in the proposal itself.
 %\meh{When a project is initiated, this basis allows such reviews to be addressed in the absence of a concrete product.} \on{obscure}
@@ -358,7 +358,7 @@ There is literature on success in open source arguing that projects should start
 
 \emph{What actions are needed?}
 Promote a culture acknowledging that any code contribution attached to a research paper that makes it possible to reproduce research results is valuable, regardless of the quality of the code. Once the code is freely available its quality can be improved.
-Provide, at the university level, services for code review that scientists wanting to release their code can use. This can increase both their confidence and their technical skills.
+Provide, at the university level, services for code review that researchers wanting to release their code can use. This can increase both their confidence and their technical skills.
 
 %A framework for understanding different kinds of software would be useful, along with better ways to evaluate the likely utility of a piece of software.
 
@@ -382,7 +382,7 @@ Whenever a paper is published within your institution that explicitly mentions t
 Reviewers of papers need to insist that code behind papers is released. Funders need to make software release part of the requirement for funding.
 
 % ----------
-\paragraph{I will match proposed software engineering practices to the actual needs and resources of the project, and I will help scientists improve the quality of their software without passing judgment.}
+\paragraph{I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.}
 
 
 \emph{Background.}
@@ -394,7 +394,7 @@ Evaluating whether a solution is appropriate is time-intensive, and end users ma
 It is hard enough to get funding to support primary software development. Researchers under any sort of financial pressure may have difficulty prioritizing such support over new development and innovation.
 
 \emph{What actions are needed?}
-If I am in the position of assessing the context or suggesting a solution, I will not only focus on the things I am most excited about (the shiny new tool) but make an effort to hear what the scientists/users are excited about, and ways the best parts of existing process and enthusiasm can be channelled into sustained productivity.
+If I am in the position of assessing the context or suggesting a solution, I will not only focus on the things I am most excited about (the shiny new tool) but make an effort to hear what the researchers/users are excited about, and ways the best parts of existing process and enthusiasm can be channelled into sustained productivity.
 
 When a software solution is proffered to a research community, there should be an explicit plan to provide sustained human support for it. This can include a statement that no such support can be provided, but the expectation should be explicitly set for the end users rather than leaving them to struggle. This allows them to incorporate support availability into their evaluation of the appropriateness of the solution.
 
@@ -411,7 +411,7 @@ Time constraints (\eg introduced by sprints, workshops, hackathons) can help mit
 \emph{Background.}
 No software project is an island. We all rely on other software to build our software. If we use free software, such as tools, libraries and compilers, then it is fair and reasonable that we try and support these projects if we can. This might include citing them, providing letters of support, reporting issues, fixing bugs, contributing new features or offering monetary contributions.
 
-If you want to get credit for intellectual contributions in software, you have to explicitly make clear what they are. Writing this down is valuable for other RSEs and scientists alike. Moreover, when writing down your intellectual contributions, you will put them into a larger context, forcing yourself to take a broader viewpoint. Publishing these contributions in international peer-reviewed venues strengthens and legitimizes the case that there are significant intellectual contributions in software.
+If you want to get credit for intellectual contributions in software, you have to explicitly make clear what they are. Writing this down is valuable for other RSEs and researchers alike. Moreover, when writing down your intellectual contributions, you will put them into a larger context, forcing yourself to take a broader viewpoint. Publishing these contributions in international peer-reviewed venues strengthens and legitimizes the case that there are significant intellectual contributions in software.
 
 %\on{This does not clarify what is intended by ``intellectual contributions in software''. Some examples should be given. Are we talking about innovative algorithms? Or open flexible design to support a range of experiments? What is the dividing line between ``intellectual contribution'' and ``software engineering for research''?}
 
@@ -515,8 +515,7 @@ The following specific questions need to be addressed:
 % --------------------------------------------------
 \subsection{Software engineering tools improving productivity by tailoring to intent and skill}
 
-% CB replaced 'scientists' in next line with 'researchers'.
-Many common tools that embody SE best practices are not written for researchers. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many scientists write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
+Many common tools that embody SE best practices are not written for researchers. Tools like Jupyter Notebook provide a more natural environment. In much SE research, the assumption is that the programmer is building and maintaining an artefact, but many researchers write code that should work and be correct, but not necessary constitute the same scale or persistence of artefact. There are ongoing SE research projects in this direction. SE is a scholarly community well-positioned to understand and design for these forms of programming.
 
 \begin{itemize}
 \item How can tool design bring what SE already knows (\eg about testing, debugging, reproducibility) to bear into the scientific context?
@@ -527,7 +526,7 @@ Many common tools that embody SE best practices are not written for researchers.
     \item Multi-scale interaction --- capability to ``zoom'' in and out of levels of abstraction
     \item Avoid independent co-evolution
     \end{itemize}
-\item Tooling and methodology to enable scientists to think about their models as first class entities
+\item Tooling and methodology to enable researchers to think about their models as first class entities
 \item Enabling co-research of the (visual) language needed to describe new theory, and enabling immediate simulation and verification of the new language.
 \item A generalized/moldable Matlab, moldable maple.
 \end{itemize}
