Fixed "Development and use"

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -136,7 +136,7 @@ and
 \end{itemize}
 
 % ----------
-\paragraph{Development}
+\paragraph{Development and use}
 \begin{itemize}
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
@@ -212,7 +212,7 @@ and
 \end{itemize}
 
 % ----------
-\paragraph{Development and Use}
+\paragraph{Development and use}
 \begin{itemize}
 \item I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.
 \item I will match proposed software engineering practices to the actual needs and resources of the project, and I will help researchers improve the quality of their software without passing judgment.
@@ -322,7 +322,7 @@ If it is not clear how this may be done, I will explicitly ask where software co
 These actions should help to drive change in the university at higher levels and will involve the actions of higher level administrators.
 
 % --------------------------------------------------
-\subsubsection*{Development and Use pledges}
+\subsubsection*{Development and use pledges}
 
 % ----------
 \paragraph{I will develop software as open source from the start, whenever possible, and I will contribute to sustaining software I use and rely on.}
