picture + thanks to dagstuhl

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -602,7 +602,7 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \participant Kathryn Huff\\ University of Illinois at Urbana-Champaign
 \participant Caroline Jay\\ University of Manchester
 \participant Daniel S. Katz\\ University of Illinois at Urbana-Champaign
-\participant Claude Kirchner\\ INRIA -- Le Chesnay
+\participant Claude Kirchner\\ Inria -- Le Chesnay
 \participant Katie Kuksenok\\ University of Washington -- Seattle
 \participant Ralf L\"ammel\\ Universit\"at Koblenz-Landau
 \participant Oscar Nierstrasz\\ University of Bern
@@ -612,10 +612,14 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \participant Jurgen Vinju\\ CWI -- Amsterdam
 \end{participants}
 
+\begin{center}
+  \includegraphics[height=11cm]{picture-16252.jpg}
+\end{center}
 
 % ==========================================================
 \section*{Acknowledgements}
 
+The participants wish to thank Schloss Dagstuhl for their strong support of this workshop. \\
 We thank Tobias Rawald (GFZ Potsdam) for his contributions to the phrasing of the pledges.
 
 
