introduce a reference to software heritage C

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -469,7 +469,14 @@ Specific questions to be addressed:
 % --------------------------------------------------
 \subsection{Facilitating software discovery within and across disciplines}
 
-A major challenge of RSE is \emph{discoverability} of relevant available software and techniques for a given research problem. This challenge is further complicated by the \emph{diversity} of programmer skill, project scale, level of concern and scale of action. Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling of discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
+A major challenge of RSE is \emph{discoverability} of relevant available software and techniques for
+a given research problem. This challenge is further complicated by the \emph{diversity} of
+programmer skill, project scale, level of concern and scale of action. The new and ambitious
+\textit{Software Heritage}\footnote{\url{https://www.softwareheritage.org}} initiative could be used
+to make software available and discoverable and provides a structured and rich repository of
+currently more that 3 billions programs. 
+
+Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling of discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
 
 % ON. Was: Econometrics of infrastructure and hidden software
 
