adjusted photo size to text width

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -620,7 +620,8 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \end{participants}
 
 \begin{center}
-  \includegraphics[height=11cm]{picture-16252.jpg}
+%  \includegraphics[height=11cm]{picture-16252.jpg}
+  \includegraphics[width=\textwidth]{picture-16252.jpg}
 \end{center}
 
 % ==========================================================
