adding libraries.io in 2.6

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -570,8 +570,9 @@ One additional necessary element would be tool support to make it easy to get ap
 \subsection{Analysis of scientific software ecosystem metadata}
 
 With better metadata about projects we can pursue systems that provide insight into the scientific software ecosystem.
-Example efforts currently include Depsy\footnote{\url{http://depsy.org}, \url{http://blog.impactstory.org/introducing-depsy/}}
+Example efforts currently include Depsy\footnote{\url{http://depsy.org},\url{http://blog.impactstory.org/introducing-depsy/}},
 %\todo{reference (Piwowar and Priem) --- can't find this. Is it a paper?} \katznote{I don't think there's a paper - there's a blog: \url{http://blog.impactstory.org/introducing-depsy/} and a draft paper: \url{https://github.com/Impactstory/depsy-research/blob/master/introducing_depsy.md}}
+Libraries.io\footnote{\url{https://libraries.io}},
 and the Scientific Software Network Map\footnote{%\url{http://scisoft-net-map.isri.cmu.edu}
 \url{http://scisoft-net-map.isri.cmu.edu:7777}}
 \cite{mcconahy2012techniques,howison2015understanding}.
