Added classification and some keywords

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -56,8 +56,15 @@
 
 \authorrunning{A. Allen et al.}%optional
 
-\subjclass{Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation".
-\keywords{Dummy keywords: Please provide 1--5 keywords}% mandatory: Please provide 1-5 keywords
+\subjclass{D.2.9 Software Engineering -- Management
+%Dummy classification: please check \url{http://www.acm.org/about/class/ccs98-html}. Cite, for example, as:  ``B.3.3 Performance Analysis and Design Aids, C.1.2 Multiple Data Stream Architectures (Multiprocessors)''
+}% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation".
+\keywords{%
+Academic software;
+Software citations;
+Software sustainability.
+%Dummy keywords: Please provide 1--5 keywords
+}% mandatory: Please provide 1-5 keywords
 
 \seminarnumber{16252}
 \semdata{19.--24.~June, 2016 -- \href{http://www.dagstuhl.de/16252}{www.dagstuhl.de/16252}}
@@ -95,7 +102,7 @@ The Dagstuhl Perspectives Workshop on ``Engineering Academic Software'' has exam
 The manifesto is expressed in terms of a series of actionable ``pledges'' that users and developers of academic research software can take as concrete steps towards improving the environment in which that software is produced.
 \end{abstract}
 
-\newpage
+%\newpage
 % ==================================================
 %:=== Executive Summary ===
 \section*{Executive Summary}
