adding research software keyword - changing citations to citation

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -61,7 +61,8 @@
 }% mandatory: Please choose ACM 1998 classifications from http://www.acm.org/about/class/ccs98-html . \eg cite as "F.1.1 Models of Computation".
 \keywords{%
 Academic software;
-Software citations;
+Research software;
+Software citation;
 Software sustainability.
 %Dummy keywords: Please provide 1--5 keywords
 }% mandatory: Please provide 1-5 keywords
