--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -16,6 +16,8 @@
 \newcommand{\eg}{\emph{e.g.},\xspace}
 \newcommand{\etal}{\emph{et al.}\xspace}
 \newcommand{\etc}{\emph{etc.}\xspace}
+\newcommand{\apri}{\emph{a priori}\xspace}
+\newcommand{\apost}{\emph{a posteriori}\xspace}
 % ==========================================================
 
 \usepackage{url}
@@ -97,7 +99,7 @@ Software is often a critical component of scientific research.
 It can be a component of the academic research methods used to produce research results, or it may itself be an academic research result.
 Software, however, has rarely been considered to be a citable artifact in its own right.
 With the advent of open-source software, artifact evaluation committees of conferences, and journals that include source code and running systems as part of the published artifacts, we foresee that software will increasingly be recognized as part of the academic process.
-The quality and sustainability of this software must be accounted for, both a priori and a posteriori.
+The quality and sustainability of this software must be accounted for, both \apri and \apost.
 
 The Dagstuhl Perspectives Workshop on ``Engineering Academic Software'' has examined the strengths, weaknesses, risks, and opportunities of academic software engineering. A key outcome of the workshop is this Dagstuhl Manifesto, serving as a roadmap towards future professional software engineering for software-based research instruments and other software produced and used in an academic context.
 The manifesto is expressed in terms of a series of actionable ``pledges'' that users and developers of academic research software can take as concrete steps towards improving the environment in which that software is produced.
@@ -134,7 +136,7 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used. 
+\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 \end{itemize}
 
 % ----------
@@ -209,7 +211,7 @@ and
 % ----------
 \paragraph{Citation}
 \begin{itemize}
-\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used. 
+\item I will make explicit how to cite my software, I will cite the software I used to produce my research results, and when reviewing, I will require others to cite the software they have used.
 %\katznote{maybe ``\dots and when reviewing, I will require others to cite the software they have used.''}
 \end{itemize}
 
@@ -482,7 +484,7 @@ a given research problem. This challenge is further complicated by the \emph{div
 programmer skill, project scale, level of concern and scale of action. The new and ambitious
 \textit{Software Heritage}\footnote{\url{https://www.softwareheritage.org}} initiative could be used
 to make software available and discoverable and provides a structured and rich repository of
-currently more that 3 billions programs. 
+currently more that 3 billions programs.
 
 Understanding the metadata ecosystem is another major research focus, but what other approaches, aside from (or complementary to) standards can support scaling of discoverability? Other questions on this agenda are concerned with measuring the amount and cost of hidden software, but we already recognize it as a pain point that may be addressed with design, tooling, and workshops.
 
