Add RSE paper as reference for not releasing code.

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -344,7 +344,7 @@ Initially developing software in closed fora often loses the benefits of open so
 
 Starting as you intend to continue is important, because projects have their own momentum; it is far more difficult to change once you have established practices and infrastructure. Indeed transitioning from a typical, co-located, PI-directed software development process to an open process involves substantial organizational change across at least three dimensions (i) Governance and Leadership, (ii) Collaboration infrastructure, and (iii) Contribution processes~\cite{howison2014collaboration}.
 
-A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the researcher will be judged negatively based on the poor quality of the code.
+A commonly used argument for not releasing the code associated with a research paper into the wild is that the code is ``bad'' and the researcher will be judged negatively based on the poor quality of the code~\cite{jay_git_jors}.
 %\meh{Dismissive, uncharitable comments about existing code, as well as identifying a component that is ``easy'' to ``just'' do in some particular way.}
 Dismissive, uncharitable comments about existing code can lead to online shaming, creating and perpetuating a negative attitude towards publishing code developed by researchers.
 % There is an issue of shame in the research software community which often prevents researchers from releasing the code that facilitated their research.
