--- a/eas.bib
+++ b/eas.bib
@@ -365,3 +365,10 @@ url={https://github.com/danielskatz/sustaining-research-projects},
 year={2016},
 note={[Last accessed: 2016-11-22]}
 }
+
+@article{jay_git_jors,
+	title = {{“Not everyone can use Git”: Research Software Engineers’ recommendations for scientist-centred software support (and what researchers really think of them)}},
+	journal = {Journal of Open Research Software},
+	author = {Caroline Jay and Rawan Sanyour and Robert Haines},
+  year = {In press}
+}
